# Biomethane-Project

./: .gitignore  Makefile  README.md  my_case.yaml  pyproject.toml
case_files/: biometano_case.yaml
docs/: export_formula_map.md
examples/: USER_GUIDE.md  example_input.yaml  nordsilica_exercise.md  nordsilica_input.yaml  nordsilica_solution.md
output/: biometano_report.xlsx  results.xlsx
output/biometano/: biometano_report.xlsx
output/csv/: 10_Reconciliation.csv  1_Inputs_Summary.csv  2_Operating_Projections.csv  2_Revenue.csv  3_NWC_Schedule.csv  3_OPEX.csv  4_Income_Statement.csv  4_Investments.csv  5_Cash_Flow.csv  5_Cash_Flows.csv  6_FCFF_FCFE.csv  6_WACC_Details.csv  7_PV_Decomposition.csv  8_Terminal_Value.csv  9_Valuation_Bridge.csv
report/: biometano_report.xlsx
report/csv/: 3_OPEX.csv  6_FCFF_FCFE.csv  7_Valuation.csv
scripts/: smoke_test.py  smoke_test.sh
src/dcf_engine/: __init__.py  cashflows.py  discount_rates.py  discounting.py  engine.py  models.py  projections.py  taxes.py  terminal_value.py  validation.py  valuation.py
src/dcf_io/: __init__.py  readers.py  writers.py  xlsx_layout.py  xlsx_validation.py
src/dcf_modeling_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dcf_projects/: __init__.py
src/dcf_ui_cli/: __init__.py  biometano_charts.py  biometano_cli.py  biometano_display.py  charts.py  cli.py  display.py
test_output/: biometano_report.xlsx
test_output/csv/: 1_Production.csv  5_Cash_Flow.csv
tests/integration/: test_biometano.py  test_biometano_export_formulas.py  (+1 more)
(+17 files in other folders)
